# fb2

./: .gitignore  README.md  add-source.sh  azure-pipelines.yml  build.fsx  dotnet-fake.csproj  fake.sh  fb2.sln
.ionide/: symbolCache.db
IntegrationTests/: IntegrationTests.fsproj  Program.fs
fb2/: Async.fs  CommonExtensions.fs  DotnetProjectParser.fs  FB2.fs  Graph.fs  Model.fs  Pathes.fs  ProcessHelper.fs  Program.fs  RustProjectParser.fs  Snapshot.fs  Zip.fs  csproj.xml  fb2.fsproj
fb2/SourceControl/: Git.fs
fb2/Storage/: FileSystemSnapshotStorage.fs  GCSSnapshotStorage.fs
tests/: CommonToolsTests.fs  DotNetProjectParserTests.fs  Library.fs  RustParserTests.fs  Snapshots.fs  tests.fsproj
tests/Samples/: Cargo.toml  Test.csproj
