[package]
name = "my-project"
version = "0.1.0"
authors = ["me"]
edition = "2018"

[features]
bidswitch = []
adx = []

[dependencies]
# rest api
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
# json
serde = { version="1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
# async
futures = "0.3.7"
# random
rand = "0.7.3"
# bidder protobuf generated contracts
bidder_contract = { path = "../bidder_contract" }
rust-protobuf-schema = { path = "../../Shared/rust-protobuf-schema" }
# grpc/protobuf
protobuf = "~2.22"
grpcio = { version = "0.7.0", features = ["openssl"] }
# DateTime and TimeZones
chrono = "0.4.19"
chrono-tz = "0.5"
#URL
url = "2.2.0"
base64 = "0.13.0"
#Pubsub
pubsub = { path = "../../library/pubsub" }
actix = "0.11"
actix-rt = "2.2.0"
uuid = { version = "0.8.2", features = ["v4"] }
